--- a/Clase5/Vagrantfile
+++ b/Clase5/Vagrantfile
@@ -3,16 +3,24 @@ Vagrant.configure("2") do |config|
    web.vm.box = "ubuntu/lunar64"
    web.vm.network "public_network"
    web.vm.provision "shell", inline: <<-SHELL
-      sudo useradd -m -s /bin/bash -p 'asd1234' ansible
-      sudo usermod -aG sudo ansible
-   SHELL
+       sudo useradd -m -s /bin/bash -p 'asd1234' ansible
+       sudo usermod -aG sudo ansible
+       echo 'Match User ansible' | sudo tee -a /etc/ssh/sshd_config
+       echo '    PasswordAuthentication yes' | sudo tee -a /etc/ssh/sshd_config
+       echo '    PubkeyAuthentication no' | sudo tee -a /etc/ssh/sshd_config
+       sudo service ssh restart
+    SHELL
   end
   config.vm.define "dbserver" do |db|
     db.vm.box = "ubuntu/lunar64"
     db.vm.network "public_network"
     db.vm.provision "shell", inline: <<-SHELL
-      sudo useradd -m -s /bin/bash -p 'asd1234' ansible
+      sudo useradd -m -s /bin/bash -p asd1234 ansible
       sudo usermod -aG sudo ansible
+      echo 'Match User ansible' | sudo tee -a /etc/ssh/sshd_config
+      echo '    PasswordAuthentication yes' | sudo tee -a /etc/ssh/sshd_config
+      echo '    PubkeyAuthentication no' | sudo tee -a /etc/ssh/sshd_config
+      sudo service ssh restart
     SHELL
   end
 end
