--- a/Clase4/inventory.ini
+++ b/Clase4/inventory.ini
@@ -1,3 +1,4 @@
 [webservers]
-192.168.1.9 ansible_user=vboxuser ansible_password=changeme
-192.168.1.10 ansible_user=yunnier ansible_password=asd1234
+#192.168.1.12 ansible_user=ansible ansible_password=asd1234
+192.168.1.14 ansible_user=ansible ansible_password=asd1234
+#192.168.1.11 ansible_user=yunnier ansible_password=asd1234
