--- a/DesafioAnsible/Jenkinsfile
+++ b/DesafioAnsible/Jenkinsfile
@@ -9,7 +9,7 @@ pipeline {
 
         stage('Execute ansible') {
             steps {
-                ansiblePlaybook colorized: true, installation: 'ansible', inventory: '192.168.1.9', playbook: 'prueba.yml'
+                ansiblePlaybook colorized: true, installation: 'ansible', inventory: '192.168.1.9', playbook: 'DesafioAnsible/prueba.yml'
             }
         }
     }
