--- a/DesafioAnsible/inventory.ini
+++ b/DesafioAnsible/inventory.ini
@@ -1,4 +1,6 @@
 [wordpress]
-192.168.1.9 ansible_user=yunnier ansible_password=asd1234
+localhost ansible_user=yunnier ansible_password=asd1234
 [monitoring]
 192.168.1.7 ansible_user=ansible ansible_password=asd1234
+
+#192.168.1.9
